Version 0.1.0+dev
- allowed setting menu's html id

Version 0.1.0
- first version