@@ -20,7 +20,6 @@ class MenuExtension extends \Nette\DI\CompilerExtension {
   ];
   
   protected $menuDefaults = [
-    "type" => "inline",
     "title" => "",
     "htmlId" => "menu",
     "items" => [],
@@ -51,7 +50,6 @@ class MenuExtension extends \Nette\DI\CompilerExtension {
   static function createMenu(string $name, array $config): Menu {
     $menu = new Menu($name, $config["htmlId"]);
     $menu->title = $config["title"];
-    $menu->type = $config["type"];
     foreach($config["items"] as $text => $link) {
       $menu[] = new MenuItem($link, $text);
     }
