@@ -28,16 +28,6 @@ class MenuExtensionTest extends \Tester\TestCase {
     /** @var Menu $menu */
     $menu = $this->getService(Menu::class);
     Assert::type(Menu::class, $menu);
-    Assert::same("inline", $menu->type);
-    $this->refreshContainer(["menu" => [
-      "default" => [
-        "type" => "list"
-      ]
-    ]]);
-    /** @var Menu $menu */
-    $menu = $this->getService(Menu::class);
-    Assert::type(Menu::class, $menu);
-    Assert::same("list", $menu->type);
   }
 }
 
