@@ -3,7 +3,8 @@ declare(strict_types=1);
 
 namespace Nexendrie\Menu;
 
-use Tester\Assert;
+use Tester\Assert,
+    Nette\ComponentModel\IComponent;
 
 require __DIR__ . "/../../bootstrap.php";
 
@@ -23,14 +24,27 @@ class MenuControlTest extends \Tester\TestCase {
     $this->attachToPresenter($this->control);
   }
   
-  function testRenderSimple() {
+  protected function checkRenderMethodOutput(IComponent $control, $expected, $method = "render", array $renderParameters = []) {
+    if(!$control->getParent()) {
+      $this->attachToPresenter($control);
+    }
+    ob_start();
+    $control->$method(...$renderParameters);
+    if(is_file($expected)) {
+      \Tester\Assert::matchFile($expected, ob_get_clean());
+    } else {
+      \Tester\Assert::match($expected, ob_get_clean());
+    }
+  }
+  
+  function testRenderInline() {
     $filename = __DIR__ . "/menuSimpleExpected.latte";
     $this->checkRenderOutput($this->control, $filename);
   }
   
   function testRenderList() {
     $filename = __DIR__ . "/menuListExpected.latte";
-    $this->checkRenderOutput($this->control, $filename, ["list"]);
+    $this->checkRenderMethodOutput($this->control, $filename, "renderList", ["list"]);
   }
   
   function testInvalidMenu() {
