@@ -1,5 +1,6 @@
 Version 0.1.0+dev
 - allowed setting menu's html id
+- menu type's is now determined in template, see documentation
 
 Version 0.1.0
 - first version
